--- a/IMTIHON/IMTIHON/index.html
+++ b/IMTIHON/IMTIHON/index.html
@@ -45,7 +45,7 @@
             <div class="wrapper">
                 <div style="display: flex; align-items: center; justify-content: space-between;">
                     <h2 class="art_title">All articles</h2>
-                    <a class="link__post" href="./src/pages/dashboard.html">Create Post</a>
+                    <a class="link__post" href="./pages/dashboard.html">Create Post</a>
                 </div>
                 <div class="art">
 
