--- a/IMTIHON/IMTIHON/pages/login.html
+++ b/IMTIHON/IMTIHON/pages/login.html
@@ -18,7 +18,7 @@
             <input id="password" type="password" placeholder="Password">
             <label class="label" for="password"><i class="bi bi-eye-fill"></i></label>
         </div>
-        <p class="form-text">Don’t you have an account? <a href="../pages/sign.html">Sign Up.</a></p>
+        <p class="form-text">Don’t you have an account? <a href="../pages/registr.html">Sign Up.</a></p>
         <button type="submit" id="sign-btn">Login</button>
      
     </form>
